--- a/EmpDirForms/Views/EmpDirList.xaml
+++ b/EmpDirForms/Views/EmpDirList.xaml
@@ -1,40 +1,56 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="EmpDirForms.EmpDirList" Title="Employee Directory" BackgroundColor="#ACF0F2">
-	<ContentPage.Content>
-		<ListView x:Name="itemListview" RowHeight="75" SeparatorVisibility="None">
-			<ListView.BackgroundColor>
+	<StackLayout Spacing="0">
+		<StackLayout.BackgroundColor>
 				<OnPlatform x:TypeArguments="Color" iOS="White" Android="Black" />
-			</ListView.BackgroundColor>
-			<ListView.ItemTemplate>
-				<DataTemplate>
-					
-					<ViewCell>
-						<ViewCell.ContextActions>
-							<MenuItem Clicked="OnMore" Text="More" />
-							<MenuItem Clicked="OnDelete" Text="Delete" IsDestructive="True" />
-						</ViewCell.ContextActions>
-						<StackLayout HorizontalOptions="StartAndExpand" Orientation="Horizontal" Padding="0,2,0,2">
-							<ContentView WidthRequest="71" BackgroundColor="#f16337" Padding="10,10,10,10">
-								<Label Text="{Binding Initials}" TextColor="White" FontSize="44"/>
-							</ContentView>
+			</StackLayout.BackgroundColor>
+		<SearchBar Placeholder="Search"/>
+		<RelativeLayout VerticalOptions="Fill">
+			<ListView x:Name="itemListview" RowHeight="75" SeparatorVisibility="None" 
+				RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1}"
+				RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}">
+				<ListView.BackgroundColor>
+					<OnPlatform x:TypeArguments="Color" iOS="White" Android="Black" />
+				</ListView.BackgroundColor>
+				<ListView.ItemTemplate>
+					<DataTemplate>
+						
+						<ViewCell>
+							<ViewCell.ContextActions>
+								<MenuItem Clicked="OnMore" Text="More" />
+								<MenuItem Clicked="OnDelete" Text="Delete" IsDestructive="True" />
+							</ViewCell.ContextActions>
+							<StackLayout HorizontalOptions="StartAndExpand" Orientation="Horizontal" Padding="0,2,0,2">
+								<AbsoluteLayout WidthRequest="70" HorizontalOptions="Start">
+									<Image Source="circleblue" HeightRequest="40" WidthRequest="40"
+										AbsoluteLayout.LayoutBounds=".6,.5,.8,.8" AbsoluteLayout.LayoutFlags="All"/>
+									<Label Text="{Binding Initials}" TextColor="White" FontSize="23" HorizontalOptions="Center" XAlign="Center"
+										AbsoluteLayout.LayoutBounds=".5,.6,.5,.5" AbsoluteLayout.LayoutFlags="All"/>
+								</AbsoluteLayout>
 
-							<StackLayout Padding="5,10,0,0" VerticalOptions="StartAndExpand" Orientation="Vertical">
-								<Label Text="{Binding FullName}" YAlign="Center" FontSize="Large">
-									<Label.TextColor>
-										<OnPlatform x:TypeArguments="Color" iOS="#225378" Android="White" />
-									</Label.TextColor>
-								</Label>
-								<Label Text="{Binding Title}" YAlign="Center" FontSize="Small">
-									<Label.TextColor>
-										<OnPlatform x:TypeArguments="Color" Android="#f37d22" />
-									</Label.TextColor>
-								</Label>
+								<StackLayout Padding="5,10,0,0" Spacing="0" VerticalOptions="StartAndExpand" HorizontalOptions="Fill" Orientation="Vertical">
+									<Label Text="{Binding FullName}" YAlign="Center" FontSize="Large">
+										<Label.TextColor>
+											<OnPlatform x:TypeArguments="Color" iOS="#0B61A3" Android="White" />
+										</Label.TextColor>
+									</Label>
+									<Label Text="{Binding Title}" YAlign="Center" FontSize="Small">
+										<Label.TextColor>
+											<OnPlatform x:TypeArguments="Color" iOS="#C57100" Android="#f37d22" />
+										</Label.TextColor>
+									</Label>
+								</StackLayout>
 							</StackLayout>
-						</StackLayout>
-					</ViewCell>
+						</ViewCell>
 
-				</DataTemplate>
-			</ListView.ItemTemplate>
-		</ListView>
-	</ContentPage.Content>
+					</DataTemplate>
+				</ListView.ItemTemplate>
+			</ListView>
+			<Image Source="addemployee" 
+				RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-90}"
+				RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=0}"
+				Opacity=".7"
+				/>
+		</RelativeLayout>
+	</StackLayout>
 </ContentPage>
